--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,8 @@
 
   <body>
     <div id="arena">
+      <div class="character zombie">&nbsp;</div>
+      <div class="character rick">&nbsp;</div>
     </div>
     Seconds since game started: <span id="timer">0</span>
   </body>
