create rick grimes model and some jquery practice

--- a/views/index.html
+++ b/views/index.html
@@ -12,9 +12,8 @@
   </head>
 
   <body>
-    <div id="arena">
-      <div class="character zombie">&nbsp;</div>
-      <div class="character rick">&nbsp;</div>
+    <div id="port_authority">
+      <div class="character zombie"></div>
     </div>
     Seconds since game started: <span id="timer">0</span>
   </body>
