--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,5 +1,5 @@
 #port_authority {
-  width: 1500;
+  width: 1000;
   height: 850;
   border: 6px solid #000;
 }
@@ -11,12 +11,12 @@
 .character {
   position: absolute;
   width: 200px;
-  height: 200px;
+  height: 260px;
   background-repeat: no-repeat;
 }
 
 .rick {
-  background-image: url("../image/images-1.jpg");
+  background-image: url("../image/images-1.png");
 }
 
 .zombie {
